--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         background-attachment: fixed;
         }
         .img2{
-            background-image: url(image\ 2.webp);
+            background-image: url(image\ 2.jpg);
         }
         .img3{
-            background-image: url(image\ 3.webp);
+            background-image: url(image\ 3.jpg);
         }
         .img2,.img3{
             /* background-image: url(image\ 1.jpg); */
